Change Log:

**3/30/15**

* Added Max Discipline (preparing for 2.2)
* Changed Preparation/Punishment to Preparation with Rune selection (preparing for 2.2)
* Removed Max Hatred input field (calculated from paragon and blood vengeance)
* Changed Hatred per Second field value to be just Hatred per Second from equipment (i.e. does not include the default 5 per second)
* Added Bastions of Will Set bonus (patch 2.2)
* Added Iceblink gem (patch 2.2)

**3/24/15**

* Added support for Rain of Vengeance
* Added support for Nat's 4 piece set bonus (RoV CDR)

**3/23/15**

* Added resource generation from Hexing Pants
* Added Haunt of Vaxo (Marked for Death/Valley of Death)
* Added area damage
* Hexing pants now effects all hatred generation (generators, Bat, etc...)

**3/19/15**

* Added spike trap and caltrops runes (effects damage from Helltrapper). 
* Added Stat Calculator (quick display of DPS change for +dex/CC/CHD/etc...).

**3/18/15**

* Fixed Excel export 

**3/17/15**

* Added support for dual-wield hand crossbows (need help testing/verifying calculations)
* Item list is now saved in browser after character import
* Companion and Sentry bolt damage are now based off dual wield average weapon damage (if dual wielding)
* Added Companion rune (for less than 2pc Marauder's)
* Added Raven Companion damage 
* Added hatred generation from Marked for Death/Mortal Enemy
* Helltrapper no longer adds 2 sentries
* Helltrapper now includes Spike Trap damage (no rune currently) 

**3/16/15**

* Updated Companion DPS formula to account for Weapon APS and TnT Pet IAS
* Fixed paragon Hatred points not updating correctly
* Fixed paragon CHD and RCR fields being overwritten by wrong values after pressing "OK" in calculator dialog
* Added Helltrapper (+2 sentries)

**3/14/15**

* Added damage summary table by Shooter (Player, Sentry, Companion)

**3/13/15**

* Added Paragon Dexterity points and Hero Level input fields (both values are set automatically when importing a hero profile)
