@@ -1,0 +1,10 @@
+#This file must be located in ${user.home}/dawg6
+#
+# Blizzard API KEY
+com.dawg6.sentry.api_key=
+
+# If true, use development mode
+com.dawg6.sentry.devmode=true
+
+# IP address of Database
+com.dawg6.sentry.db=127.0.0.1
