@@ -10,7 +10,7 @@ public class Version  implements Serializable {
 
 	public static final String PREFIX = "Version:";
 	
-	public static String VERSION = "2.1.2-150330.02";
+	public static String VERSION = "2.1.2-150331.01";
 	public static String VERSION_DATE = "03/30/2015";
 	
 	public String version;
